--- a/index.html
+++ b/index.html
@@ -53,47 +53,6 @@
             <polygon points="50,0 100,0 50,100 0,100" />
           </svg>
 
-          <!-- <Popover>
-            <div class="relative pt-6 px-4 sm:px-6 lg:px-8">
-              <nav class="relative flex items-center justify-between sm:h-10 lg:justify-start" aria-label="Global">
-                <div class="flex items-center flex-grow flex-shrink-0 lg:flex-grow-0">
-                  <div class="flex items-center justify-between w-full md:w-auto">
-                    <div class="-mr-2 flex items-center md:hidden">
-                      <PopoverButton
-                        class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-blue-500">
-                        <span class="sr-only">Open main menu</span>
-                        <MenuIcon class="h-6 w-6" aria-hidden="true" />
-                      </PopoverButton>
-                    </div>
-                  </div>
-                </div>
-              </nav>
-            </div>
-
-            <transition enter-active-class="duration-150 ease-out" enter-from-class="opacity-0 scale-95"
-              enter-to-class="opacity-100 scale-100" leave-active-class="duration-100 ease-in"
-              leave-from-class="opacity-100 scale-100" leave-to-class="opacity-0 scale-95">
-              <PopoverPanel focus
-                class="absolute z-10 top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden">
-                <div class="rounded-lg shadow-md bg-white ring-1 ring-black ring-opacity-5 overflow-hidden">
-                  <div class="px-5 pt-4 flex items-center justify-between">
-                    <div>
-                      <img class="h-8 w-auto" src="images/ViVienLogo2019_BlkClr.png"
-                        alt="" />
-                    </div>
-                    <div class="-mr-2">
-
-                    </div>
-                  </div>
-                  <div class="px-2 pt-2 pb-3 space-y-1">
-                    <a v-for="item in navigation" :key="item.name" :href="item.href"
-                      class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Vivien</a>
-                  </div>
-                </div>
-              </PopoverPanel>
-            </transition>
-          </Popover> -->
-
           <!-- Intro -->
           <main class="pt-4 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
             <div class="sm:text-center lg:text-left">
@@ -385,10 +344,12 @@
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Office Connect</h1>
       <p class="mb-8 leading-relaxed">Final project made during the last two weeks of Le Wagon bootcamp. The aim of Office Connect is to create a solution for people wanting to book a working space while offices are limited in capacity due to the covid-19 restrictions. You are able to see the venues and spaces available and as an owner, you are able to create your own space for people to book.</p>
       <div class="flex justify-center">
-        <button
-        class="inline-flex text-white bg-blue-700 border-0 py-2 px-6 shadow focus:outline-none hover:bg-blue-500 rounded text-lg">GitHub Repo</button>
-        <button
-        class="ml-4 inline-flex text-gray-700 bg-gray-200 shadow border-0 py-2 px-6 focus:outline-none hover:bg-gray-600 hover:text-white rounded text-lg">Website</button>
+        <a href="https://github.com/Sally868/Office_Connect.git">
+          <button class="inline-flex text-white bg-blue-700 border-0 py-2 px-6 shadow focus:outline-none hover:bg-blue-500 rounded text-lg">GitHub Repo</button>
+        </a>
+        <a href="http://office-connect.herokuapp.com/">
+          <button class="ml-4 inline-flex text-gray-700 bg-gray-200 shadow border-0 py-2 px-6 focus:outline-none hover:bg-gray-600 hover:text-white rounded text-lg">Website</button>
+      </a>
       </div>
     </div>
   </div>
@@ -402,10 +363,12 @@
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">We Wheel Bikes</h1>
       <p class="mb-8 leading-relaxed">First full project made with Ruby On Rails during Le Wagon bootcamp. The aim of We Wheel Bikes is to make it easy for people wanting to hire a bicyles in the location of their choice. Think of 'GoGet' but with bikes.</p>
       <div class="flex justify-center">
-        <button
-        class="inline-flex text-white bg-blue-700 border-0 py-2 px-6 shadow focus:outline-none hover:bg-blue-500 rounded text-lg">GitHub Repo</button>
-        <button
-        class="ml-4 inline-flex text-gray-700 bg-gray-200 shadow border-0 py-2 px-6 focus:outline-none hover:bg-gray-600 hover:text-white rounded text-lg">Website</button>
+        <a href="https://github.com/SwethaPShivakumar/We_Wheel_Bikes.git">
+          <button class="inline-flex text-white bg-blue-700 border-0 py-2 px-6 shadow focus:outline-none hover:bg-blue-500 rounded text-lg">GitHub Repo</button>
+        </a>
+        <a href="http://we-wheel-bikes.herokuapp.com/">
+          <button class="ml-4 inline-flex text-gray-700 bg-gray-200 shadow border-0 py-2 px-6 focus:outline-none hover:bg-gray-600 hover:text-white rounded text-lg">Website</button>
+        </a>
       </div>
     </div>
   </div>
