--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               </h1>
               <h4 class="text-lg tracking-tight font-bold text-gray-400 uppercase font-mono sm:text-lg md:text-xl" >A Full-Stack Developer & Content Savvy</h4>
               <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-                Passionate, creative, ambitious and adaptable, with experience in the hospitality and music industries, I am always
+                I'm a passionate, creative, ambitious and adaptable Developer from Belgium. Fluent in French and English. I have experience in the Graphic Design, Music, Fitness and hospitality industries, I am always
                 ready for a challenge. My diverse work experience overseas and in Australia has helped me gain a unique set of skills
                 which I am looking to apply in a team-oriented environment where I can also grow, contribute and share.
               </p>
