--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               </h1>
               <h4 class="text-lg tracking-tight font-bold text-gray-400 uppercase font-mono sm:text-lg md:text-xl" >A Full-Stack Developer & Content Savvy</h4>
               <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-                I'm a passionate, creative, ambitious and adaptable Developer from Belgium. Fluent in French and English. I have experience in the Graphic Design, Music, Fitness and hospitality industries, I am always
+                Passionate, creative, ambitious and adaptable, with experience in the hospitality and music industries, I am always
                 ready for a challenge. My diverse work experience overseas and in Australia has helped me gain a unique set of skills
                 which I am looking to apply in a team-oriented environment where I can also grow, contribute and share.
               </p>
@@ -344,10 +344,10 @@
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Office Connect</h1>
       <p class="mb-8 leading-relaxed">Final project made during the last two weeks of Le Wagon bootcamp. The aim of Office Connect is to create a solution for people wanting to book a working space while offices are limited in capacity due to the covid-19 restrictions. You are able to see the venues and spaces available and as an owner, you are able to create your own space for people to book.</p>
       <div class="flex justify-center">
-        <a href="https://github.com/Sally868/Office_Connect.git" target="_blank">
+        <a href="https://github.com/Sally868/Office_Connect.git">
           <button class="inline-flex text-white bg-blue-700 border-0 py-2 px-6 shadow focus:outline-none hover:bg-blue-500 rounded text-lg">GitHub Repo</button>
         </a>
-        <a href="http://office-connect.herokuapp.com/" target="_blank">
+        <a href="http://office-connect.herokuapp.com/">
           <button class="ml-4 inline-flex text-gray-700 bg-gray-200 shadow border-0 py-2 px-6 focus:outline-none hover:bg-gray-600 hover:text-white rounded text-lg">Website</button>
       </a>
       </div>
@@ -363,10 +363,10 @@
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">We Wheel Bikes</h1>
       <p class="mb-8 leading-relaxed">First full project made with Ruby On Rails during Le Wagon bootcamp. The aim of We Wheel Bikes is to make it easy for people wanting to hire a bicyles in the location of their choice. Think of 'GoGet' but with bikes.</p>
       <div class="flex justify-center">
-        <a href="https://github.com/SwethaPShivakumar/We_Wheel_Bikes.git" target="_blank">
+        <a href="https://github.com/SwethaPShivakumar/We_Wheel_Bikes.git">
           <button class="inline-flex text-white bg-blue-700 border-0 py-2 px-6 shadow focus:outline-none hover:bg-blue-500 rounded text-lg">GitHub Repo</button>
         </a>
-        <a href="http://we-wheel-bikes.herokuapp.com/" target="_blank">
+        <a href="http://we-wheel-bikes.herokuapp.com/">
           <button class="ml-4 inline-flex text-gray-700 bg-gray-200 shadow border-0 py-2 px-6 focus:outline-none hover:bg-gray-600 hover:text-white rounded text-lg">Website</button>
         </a>
       </div>
