--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         <span class="ml-3 text-xl font-light">Vivien Timmers</span>
       </a>
       <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
-        <a class="mr-5 hover:text-gray-900">About</a>
-        <a class="mr-5 hover:text-gray-900">Experience</a>
-        <a class="mr-5 hover:text-gray-900">Projects</a>
+        <a class="mr-5 hover:text-gray-900" href="#about">About</a>
+        <a class="mr-5 hover:text-gray-900" href="#skills">Skills</a>
+        <a class="mr-5 hover:text-gray-900" href="#experience">Experience</a>
+        <a class="mr-5 hover:text-gray-900" href="#projects">Projects</a>
         <a class="mr-5 hover:text-gray-900" href="mailto:vivientimmers@gmail.com">Contact</a>
       </nav>
       <!-- <div class="flex items-center flex-grow flex-shrink-0">
@@ -53,23 +54,22 @@
             <polygon points="50,0 100,0 50,100 0,100" />
           </svg>
 
-          <!-- Intro -->
+          <!-- About -->
           <main class="pt-4 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
-            <div class="sm:text-center lg:text-left">
+            <div class="sm:text-center lg:text-left" id="about" >
               <h1 class="text-4xl tracking-tight font-extrabold text-gray-800 sm:text-5xl md:text-6xl">
                 <span class="block xl:inline">Hi! My name is</span>
                 <span class="block text-blue-800 xl:inline">Vivien.</span>
               </h1>
               <h4 class="text-lg tracking-tight font-bold text-gray-400 uppercase font-mono sm:text-lg md:text-xl" >A Full-Stack Developer & Content Savvy</h4>
               <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-                Passionate, creative, ambitious and adaptable, with experience in the hospitality and music industries, I am always
+                I'm a passionate, creative, ambitious and adaptable Developer from Belgium. Fluent in French and English. I have experience in the Graphic Design, Music, Fitness and hospitality industries, I am always
                 ready for a challenge. My diverse work experience overseas and in Australia has helped me gain a unique set of skills
                 which I am looking to apply in a team-oriented environment where I can also grow, contribute and share.
               </p>
               <div class="mt-5 sm:mt-8 sm:flex sm:justify-center lg:justify-start">
                 <div class="rounded-md shadow">
-                  <a href="#"
-                    class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 md:py-4 md:text-lg md:px-10">
+                  <a href="#skills" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 md:py-4 md:text-lg md:px-10">
                     Get started
                   </a>
                 </div>
@@ -86,16 +86,16 @@
     </div>
   </section>
 
-<!-- EXPERIENCE -->
+<!-- SKILLS -->
 <section id="main" class="wrapper style2">
   <div class="">
     <!-- Image -->
-    <a href="#" class="image featured">
+    <a class="image featured">
       <img src="images/BannerViSD.jpg" alt="">
     </a>
     <!-- Features -->
   <section class="text-gray-600 body-font">
-    <div class=" px-5 py-16 mx-auto flex flex-wrap">
+    <div class=" px-5 py-16 mx-auto flex flex-wrap" id="skills">
       <div class="flex flex-wrap w-full mb-8 flex-col items-center text-center">
         <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-gray-900">Skills</h1>
         <p class="lg:w-1/2 w-full leading-relaxed text-gray-500">Knowledge &amp; soft skills.</p>
@@ -184,7 +184,7 @@
 
 <!-- EXPERIENCE -->
 <section class="text-gray-600 body-font">
-  <div class="container px-5 py-16 mx-auto">
+  <div class="container px-5 py-16 mx-auto" id="experience">
     <div class="flex flex-wrap w-full mb-12 flex-col items-center text-center">
       <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-gray-900">Experience</h1>
       <p class="lg:w-1/2 w-full leading-relaxed text-gray-500">Professional career summary.</p>
@@ -333,7 +333,7 @@
 
 <!-- PROJECTS -->
 <section class="text-gray-600 body-font">
-  <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
+  <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col" id="projects">
     <div class="flex flex-wrap w-full mb-12 flex-col items-center text-center">
       <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-gray-900">Past Projects</h1>
       <p class="lg:w-1/2 w-full leading-relaxed text-gray-500">Personal &amp; Professional Projects.</p>
@@ -344,10 +344,10 @@
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Office Connect</h1>
       <p class="mb-8 leading-relaxed">Final project made during the last two weeks of Le Wagon bootcamp. The aim of Office Connect is to create a solution for people wanting to book a working space while offices are limited in capacity due to the covid-19 restrictions. You are able to see the venues and spaces available and as an owner, you are able to create your own space for people to book.</p>
       <div class="flex justify-center">
-        <a href="https://github.com/Sally868/Office_Connect.git">
+        <a href="https://github.com/Sally868/Office_Connect.git" target="_blank">
           <button class="inline-flex text-white bg-blue-700 border-0 py-2 px-6 shadow focus:outline-none hover:bg-blue-500 rounded text-lg">GitHub Repo</button>
         </a>
-        <a href="http://office-connect.herokuapp.com/">
+        <a href="http://office-connect.herokuapp.com/" target="_blank">
           <button class="ml-4 inline-flex text-gray-700 bg-gray-200 shadow border-0 py-2 px-6 focus:outline-none hover:bg-gray-600 hover:text-white rounded text-lg">Website</button>
       </a>
       </div>
@@ -363,10 +363,10 @@
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">We Wheel Bikes</h1>
       <p class="mb-8 leading-relaxed">First full project made with Ruby On Rails during Le Wagon bootcamp. The aim of We Wheel Bikes is to make it easy for people wanting to hire a bicyles in the location of their choice. Think of 'GoGet' but with bikes.</p>
       <div class="flex justify-center">
-        <a href="https://github.com/SwethaPShivakumar/We_Wheel_Bikes.git">
+        <a href="https://github.com/SwethaPShivakumar/We_Wheel_Bikes.git" target="_blank">
           <button class="inline-flex text-white bg-blue-700 border-0 py-2 px-6 shadow focus:outline-none hover:bg-blue-500 rounded text-lg">GitHub Repo</button>
         </a>
-        <a href="http://we-wheel-bikes.herokuapp.com/">
+        <a href="http://we-wheel-bikes.herokuapp.com/" target="_blank">
           <button class="ml-4 inline-flex text-gray-700 bg-gray-200 shadow border-0 py-2 px-6 focus:outline-none hover:bg-gray-600 hover:text-white rounded text-lg">Website</button>
         </a>
       </div>
